<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <parent>
    <artifactId>data-plane</artifactId>
    <groupId>dev.knative.eventing.kafka.broker</groupId>
    <version>1.0-SNAPSHOT</version>
  </parent>

  <artifactId>dispatcher-vertx</artifactId>

  <name>dispatcher-vertx</name>


  <properties>
    <java.version>19</java.version>
  </properties>

  <dependencies>
    <dependency>
      <groupId>junit</groupId>
      <artifactId>junit</artifactId>
      <version>4.11</version>
      <scope>test</scope>
    </dependency>
  </dependencies>

  <build>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
      <artifactId>maven-compiler-plugin</artifactId>
      <version>${maven.compiler.plugin.version}</version>
      <configuration>
        <source>${java.version}</source>
        <target>${java.version}</target>
          <compilerArgs>
            <arg>--enable-preview</arg>
          </compilerArgs>
      </configuration>
      </plugin>
    </plugins>
  </build>
</project>
